# devops-for-data

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  VERSION  dev-requirements.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: dev-deploy.yaml  feature-push.yaml  feature.yaml  main.yaml  manual-release.yaml  prod-deploy.yaml  release-deploy.yaml  start-release.yaml
src/: main.py
src/jobs/word_count/: __init__.py
test/jobs/pi/: test_pi.py
test/jobs/word_count/: test_word_count.py
test/jobs/word_count/resources/: log4j.properties  word_count.csv
