[metadata]
name = devops-for-data
version = 1.7.0-dev1
description = Meta project for Data Scientists & Engineers to setup tight data projects
author = Tom Lous
author-email = tomlous@gmail.com
url = https://github.com/TomLous/devops-for-data
long-description = file: README.md

[options]
zip_safe = False
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
ignore = E501